making swagger changes
